--- a/TattooDesign/Screens/Gallery/Cells/GalleryCompactCell.xib
+++ b/TattooDesign/Screens/Gallery/Cells/GalleryCompactCell.xib
@@ -1,21 +1,42 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="GalleryVC" customModule="TattooDesign" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="GalleryCompactCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="GalleryCompactCell" reuseIdentifier="Cell" id="gTV-IL-0wX" customClass="GalleryCompactCell" customModule="TattooDesign" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="77" height="115"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="77" height="115"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JQ0-d8-U0j">
+                        <rect key="frame" x="0.0" y="0.0" width="77" height="115"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="77" id="Hvo-Eb-qAH"/>
+                            <constraint firstAttribute="height" constant="115" id="fxq-15-N2t"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="JQ0-d8-U0j" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="2cE-BV-MO0"/>
+                <constraint firstAttribute="trailing" secondItem="JQ0-d8-U0j" secondAttribute="trailing" id="Nk2-TU-rQg"/>
+                <constraint firstItem="JQ0-d8-U0j" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="byk-wT-3kH"/>
+                <constraint firstAttribute="bottom" secondItem="JQ0-d8-U0j" secondAttribute="bottom" id="qNu-u6-cru"/>
+            </constraints>
+            <size key="customSize" width="77" height="115"/>
+            <connections>
+                <outlet property="imageView" destination="JQ0-d8-U0j" id="vcf-9L-hk5"/>
+            </connections>
+            <point key="canvasLocation" x="157.24637681159422" y="99.441964285714278"/>
         </collectionViewCell>
     </objects>
 </document>
