--- a/TattooDesign/Storyboards/Base.lproj/Main.storyboard
+++ b/TattooDesign/Storyboards/Base.lproj/Main.storyboard
@@ -254,7 +254,7 @@
                                 <rect key="frame" x="38" y="611" width="314" height="67"/>
                                 <string key="text">I do art, I have constant contact with it. It’s not boring, and is something I really enjoy. I get to know a lot of people, different artists and very interesting customers and it pays well. </string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.24705882352941178" green="0.24705882352941178" blue="0.24705882352941178" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wuH-wb-ajT">
@@ -269,7 +269,7 @@
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jake" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iFa-AV-e31">
                                         <rect key="frame" x="0.0" y="0.0" width="80" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
@@ -429,18 +429,86 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="foto" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ihx-oQ-0A7">
+                                <rect key="frame" x="165" y="290" width="225" height="168"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="140"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OSz-HG-apJ">
+                                <rect key="frame" x="143" y="706" width="104" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="8O1-p8-7ey"/>
+                                    <constraint firstAttribute="width" constant="104" id="frp-et-LPf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="VIEW ALL">
+                                    <color key="titleColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="viewAllButtonTapped:" destination="4qa-yL-vaz" eventType="touchUpInside" id="3Mn-YF-t4T"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3hQ-bH-var">
+                                <rect key="frame" x="273" y="508" width="77" height="65"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17W-OA-qKd">
+                                        <rect key="frame" x="29" y="0.0" width="48" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <color key="textColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="P H O T O S" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O2y-aE-70j">
+                                        <rect key="frame" x="0.0" y="48" width="77" height="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="17W-OA-qKd" secondAttribute="trailing" id="CoQ-qT-wnh"/>
+                                    <constraint firstAttribute="bottom" secondItem="O2y-aE-70j" secondAttribute="bottom" id="Djk-Dr-qGr"/>
+                                    <constraint firstAttribute="trailing" secondItem="O2y-aE-70j" secondAttribute="trailing" id="HlX-JS-UDP"/>
+                                    <constraint firstItem="O2y-aE-70j" firstAttribute="leading" secondItem="3hQ-bH-var" secondAttribute="leading" id="PpH-Ot-aqg"/>
+                                    <constraint firstItem="O2y-aE-70j" firstAttribute="top" secondItem="17W-OA-qKd" secondAttribute="bottom" id="dCg-EX-88p"/>
+                                    <constraint firstItem="17W-OA-qKd" firstAttribute="top" secondItem="3hQ-bH-var" secondAttribute="top" id="sOO-0s-0Cp"/>
+                                    <constraint firstItem="O2y-aE-70j" firstAttribute="top" secondItem="17W-OA-qKd" secondAttribute="bottom" id="vRl-1w-sEh"/>
+                                </constraints>
+                            </view>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="uab-tH-piz">
+                                <rect key="frame" x="0.0" y="593" width="390" height="98"/>
+                                <color key="backgroundColor" red="0.24705882352941178" green="0.24705882352941178" blue="0.24705882352941178" alpha="0.0" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="I4k-HC-G3o">
+                                    <size key="itemSize" width="123" height="123"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="31P-Mw-lXh"/>
                         <color key="backgroundColor" red="0.90588235289999997" green="0.90588235289999997" blue="0.90588235289999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="VGy-DS-rbf" firstAttribute="leading" secondItem="31P-Mw-lXh" secondAttribute="leading" constant="25" id="3g7-90-6D1"/>
+                            <constraint firstAttribute="bottom" secondItem="OSz-HG-apJ" secondAttribute="bottom" constant="50" id="6Wt-qA-qhg"/>
+                            <constraint firstItem="3hQ-bH-var" firstAttribute="top" secondItem="Ihx-oQ-0A7" secondAttribute="bottom" constant="50" id="8xa-TB-PlV"/>
                             <constraint firstItem="31P-Mw-lXh" firstAttribute="trailing" secondItem="fJS-eJ-haP" secondAttribute="trailing" constant="25" id="CNv-Br-McY"/>
                             <constraint firstItem="5rb-gs-7Qg" firstAttribute="leading" secondItem="31P-Mw-lXh" secondAttribute="leading" id="F6b-nu-GNL"/>
+                            <constraint firstItem="uab-tH-piz" firstAttribute="leading" secondItem="31P-Mw-lXh" secondAttribute="leading" id="LeH-cr-n1X"/>
+                            <constraint firstItem="Ihx-oQ-0A7" firstAttribute="trailing" secondItem="31P-Mw-lXh" secondAttribute="trailing" id="NHU-zJ-lwJ"/>
+                            <constraint firstItem="uab-tH-piz" firstAttribute="top" secondItem="3hQ-bH-var" secondAttribute="bottom" constant="20" id="NdZ-Rv-5u7"/>
                             <constraint firstItem="ola-QB-jji" firstAttribute="top" secondItem="9zQ-TQ-qv8" secondAttribute="top" constant="107" id="P2O-BW-2LF"/>
                             <constraint firstItem="VGy-DS-rbf" firstAttribute="top" secondItem="9zQ-TQ-qv8" secondAttribute="top" constant="50" id="PwB-cO-er3"/>
                             <constraint firstItem="5rb-gs-7Qg" firstAttribute="top" secondItem="9zQ-TQ-qv8" secondAttribute="top" id="TYJ-sG-Jwd"/>
+                            <constraint firstItem="OSz-HG-apJ" firstAttribute="centerX" secondItem="9zQ-TQ-qv8" secondAttribute="centerX" id="Ul7-w7-umw"/>
                             <constraint firstItem="fJS-eJ-haP" firstAttribute="top" secondItem="9zQ-TQ-qv8" secondAttribute="top" constant="40" id="fNR-F3-ppY"/>
+                            <constraint firstItem="OSz-HG-apJ" firstAttribute="top" secondItem="uab-tH-piz" secondAttribute="bottom" constant="15" id="gXx-Nl-qy3"/>
+                            <constraint firstItem="31P-Mw-lXh" firstAttribute="trailing" secondItem="3hQ-bH-var" secondAttribute="trailing" constant="40" id="kKp-hs-Bwn"/>
+                            <constraint firstItem="31P-Mw-lXh" firstAttribute="trailing" secondItem="uab-tH-piz" secondAttribute="trailing" id="lZR-WX-Xua"/>
                             <constraint firstItem="ola-QB-jji" firstAttribute="leading" secondItem="31P-Mw-lXh" secondAttribute="leading" constant="24" id="qFj-x1-ZzN"/>
+                            <constraint firstItem="Ihx-oQ-0A7" firstAttribute="top" secondItem="9zQ-TQ-qv8" secondAttribute="top" constant="290" id="uBU-JP-zPe"/>
                             <constraint firstAttribute="bottom" secondItem="5rb-gs-7Qg" secondAttribute="bottom" constant="145" id="vUQ-3A-UAU"/>
                             <constraint firstAttribute="trailing" secondItem="5rb-gs-7Qg" secondAttribute="trailing" id="viq-SB-AdC"/>
                         </constraints>
@@ -448,11 +516,13 @@
                     <navigationItem key="navigationItem" id="hzT-tO-5ST"/>
                     <connections>
                         <outlet property="backButton" destination="VGy-DS-rbf" id="iDa-1V-iPc"/>
+                        <outlet property="collectionView" destination="uab-tH-piz" id="YMf-Em-R5h"/>
+                        <outlet property="viewAllButton" destination="OSz-HG-apJ" id="hjh-gg-K6A"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HJG-U9-Haq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3180" y="316"/>
+            <point key="canvasLocation" x="3180" y="315.63981042654029"/>
         </scene>
         <!--SignVC-->
         <scene sceneID="vca-Vq-7mu">
